[package]
name = "filepush-rs"
version = "0.1.3"
description = "Simple library to upload and download files to/from https://filepush.co/"
authors = ["Harsh Shandilya <msfjarvis@gmail.com>", "Mariano Arellano <im@mariano.pw>"]
keywords = ["filepush", "transfer", "upload", "curl", "share"]
repository = "https://github.com/marianopw/filepush-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["api-bindings"]
edition = "2018"

[dependencies]
reqwest = "0.9.19"

[dev-dependencies]
clap = "2.33.0"

[lib]
name = "filepush"
path = "src/lib.rs"
